# eRob_SOEM_linux

./: .gitignore  CMakeLists.txt  CMakeLists_ERobController.txt  ERobMotorController.cpp  ERobMotorController.h  ERobMotorController.mk  ERobMotorController_README.md  README.md  README_ERobMotorController.md  motor_controller_example.cpp
demo/: CMakeLists.txt  eCoder_fake.py  eRob_CSP.cpp  eRob_CSP_subscriber.cpp  eRob_CST.cpp  eRob_CSV.cpp  eRob_PP_subscriber.cpp  eRob_PT.cpp  eRob_TC.cpp
examples/: ERobThreeAxisExample.cpp  controller_test.cpp
include/: ERobMotorController.hpp
soem/: ethercatdc.c
src/: ERobMotorController.cpp  ERobMotorController_Private.cpp
test/linux/red_test/: red_test.c
test/linux/simple_test/: CMakeLists.txt  eRob_test.cpp  github.cpp  simple_test.c
